Solve truncation of post details, solve types for uncollideContent(), center delete icon

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,8 @@
   justify-content: center;
   min-height: 100vh;
 }
+
+.MuiCardHeader-action.css-sgoict-MuiCardHeader-action {
+  align-self: auto;
+  margin: 0 auto;
+}
